# linexin-desktop-presets

./: PKGBUILD  README.md  dash-to-panel-linexin.ini  default.sh  distroselect  gnome.sh  linexin-desktop-presets  linexin-desktop-presets-3.0.0.r-1-x86_64.pkg.tar.zst  linexin-desktop-presets.install  pyproject.toml  update-monitor.sh  windowish.sh
etc/skel/.local/share/linexin/linexin-desktop/: dash-to-dock-linexin.ini  default.sh  windowish.sh
pkg/linexin-desktop-presets/: .BUILDINFO  .INSTALL  .MTREE  .PKGINFO
pkg/linexin-desktop-presets/usr/share/applications/: github.petexy.linexin-desktop-presets.desktop
pkg/linexin-desktop-presets/usr/share/linexin/widgets/: b-desktop_presets.py
src/etc/skel/.local/share/linexin/linexin-desktop/: arcmenu-linexin.ini  blur-linexin.ini  blur-ubunexin-linexin.ini  dash-to-dock-linexin.ini  dash-to-panel-linexin.ini  default.sh  ding-linexin.ini  ubunexin.sh  windowish.sh
src/usr/share/applications/: github.petexy.linexin-desktop-presets.desktop
src/usr/share/linexin/widgets/: b-desktop_presets.py
src/usr/share/linexin/widgets/localization/de_DE/: desktop_presets_dictionary.py
src/usr/share/linexin/widgets/localization/en_US/: desktop_presets_dictionary.py
src/usr/share/linexin/widgets/localization/es_ES/: desktop_presets_dictionary.py
src/usr/share/linexin/widgets/localization/fr_FR/: desktop_presets_dictionary.py
src/usr/share/linexin/widgets/localization/hi_IN/: desktop_presets_dictionary.py
src/usr/share/linexin/widgets/localization/pl_PL/: desktop_presets_dictionary.py
(+60 files in other folders)
